--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-    "token": "ODgxOTkxNjgxNjE0OTM4MTQy.YS04ww.9-kdFEVLXafJPoSL9afsw69WbEE",
+    "token": "ODkxODM2ODg0ODY1NjcxMTgw.YVEJ0g.lz5MfdnNzxIanRvGNRgjyaQraPk",
     "prefix": "t",
     "owner": "763489078477848617",
     "signup_color": "e7eb0c",
