--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-    
+    "token": "ODkxODM2ODg0ODY1NjcxMTgw.YVEJ0g.cHjcV_9-BPFl0VmAf5Bm0BYvCI4",
     "prefix": "t",
     "owner": "763489078477848617",
     "signup_color": "e7eb0c",
