--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-    "token": "ODkyMDIxMzc0Mjc5OTAxMjM0.YVG1pA.tF0FnmDErRa_0SFw6vbArBJNPOI",
+    "token": "ODI4ODc3NTk3MjEwOTY4MTQ0.YGv-ag.WgxpguzqxTLqCx8a2g5Xs8RwtdI",
     "prefix": "t",
     "owner": "763489078477848617",
     "signup_color": "e7eb0c",
