--- a/package.json
+++ b/package.json
@@ -1,15 +1,33 @@
 {
-  "name": "discord-ticket-bot",
-  "version": "1.0.0",
-  "description": "A simple Ticket Bot for discord coded in Discord.js",
-  "main": "main.js",
-  "scripts": {
-    "start": "node main.js"
-  },
-  "keywords": [],
-  "author": "arisamiga",
-  "license": "Apache-2.0",
-  "dependencies": {
-    "discord.js": "^12.5.3"
-  }
+    "name": "8ticket",
+    "version": "1.0.0",
+    "description": "Open a ticket using reaction with 8Ticket",
+    "main": "./src/index.js",
+    "scripts": {
+        "test": "echo \"Error: no test specified\" && exit 1",
+        "start": "node ./src/index.js"
+    },
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/DevelopersSupportAR/8Ticket.git"
+    },
+    "keywords": [
+        "ticket-bot"
+    ],
+    "author": "niro",
+    "license": "MIT",
+    "bugs": {
+        "url": "https://github.com/DevelopersSupportAR/8Ticket/issues"
+    },
+    "homepage": "https://github.com/DevelopersSupportAR/8Ticket#readme",
+    "dependencies": {
+        "chalk": "^4.1.1",
+        "discord-buttons": "^4.0.0",
+        "discord.js": "^12.5.3",
+        "dotenv": "^10.0.0",
+        "express": "^4.17.1",
+        "figlet": "^1.5.0",
+        "fs": "0.0.1-security",
+        "quick.db": "^7.1.3"
+    }
 }
